--- a/hw2/hw2.cabal
+++ b/hw2/hw2.cabal
@@ -37,6 +37,6 @@ library
       src
   build-depends:
       base >=4.7 && <5
-    , scientific >= 0.3.7.0
+    , scientific
   default-language: Haskell2010
 
